Revised device-info, installer status and status
